# Nade-Python

./: .gitignore  AGENTS.md  README.md  nade_adapter.py  pyproject.toml  test_standalone.py  verify_audio.py
ClaudeCode-Project/: 0f10d76b-de1a-45d2-95d6-6b1f5074a96d.jsonl  3046e1b8-7cdd-4389-91d9-c5f5b67e7687.jsonl  sessions-index.json
ClaudeCode-Project/0f10d76b-de1a-45d2-95d6-6b1f5074a96d/subagents/: agent-a91da93.jsonl
ClaudeCode-Project/0f10d76b-de1a-45d2-95d6-6b1f5074a96d/tool-results/: toolu_01Q9DbnGseq5kx46bDK6XHZL.txt
adapter/: __init__.py  drybox_adapter.py
adapter/modes/: mode_a.py  mode_b.py
adapters/: __init__.py  drybox_adapter.py  nda_adapter.py
docs/: WINDOWS_SUPPORT.md  architecture.md  audio_smoke_plan.md  cpfsk_newbie_guide.md  nade_module_reference.md
mode_a/: __init__.py  mode_a.py  noise_wrapper.py
nade/: __init__.py  audio.py  engine.py  mode_a.py  mode_b.py  nade_adapter.py  streamer.py
nade/_vendor/: __init__.py
nade/_vendor/liquid/: README.md  __init__.py
nade/adapter/: drybox_adapter.py
nade/adapters/: __init__.py  drybox_adapter.py  nda_adapter.py
nade/core/: audio.py
nade/core/modems/: fsk4.py
nade/crypto/: noise_wrapper.py
nade/modems/: __init__.py  cpfsk.py  fsk2.py  fsk4.py  imodem.py
nade/modes/: mode_a.py  mode_b.py
nade/protocol/: __init__.py  actions.py  events.py  machine.py  state.py
nade/transport/: __init__.py  audio.py  interface.py
test_nade/: gen_keys.py  scenario.yaml  test_mode_a.py  test_mode_b.py
tests/: conftest.py  test_imports.py  test_nda_integration.py
tests/adapters/: __init__.py  test_nda_adapter.py
tests/modems/: test_cpfsk.py  test_cpfsk_loop.py
tools/: compare_text_run.py
