[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nade-python"
version = "0.0.2"
description = "Nade Protocol (Noise-Authenticated Duplex Encryption) Python Implementation - Including the DryBox Adapter"
authors = [{name="Florian Griffon"}, {name="Icing Project"}, {name="STCB"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.7",
    "numpy>=2.3.3",
    "dissononce>=0.34.3",
    "PyYAML>=6.0",
    "cffi>=1.17.0",
    "liquid-dsp>=1.6.0",
    "pytest>=8.3.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nade", "nade.*", "adapter", "adapter.*"]

[project.entry-points."drybox.adapters"]
# DryBox v1 currently loads adapters via module path specs (path/to/file.py:Class).
# Keep entry point for future discovery compatibility, pointing to the actual module path.
nade-python = "adapter.drybox_adapter:Adapter"

# (optionnel selon runner)
[project.entry-points."nade.dev"]
nade = "nade.nade:StateMachine"
